--- a/ConsoleFollower/Properties/launchSettings.json
+++ b/ConsoleFollower/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "ConsoleFollower": {
       "commandName": "Project",
-      "commandLineArgs": "0001353316"
+      "commandLineArgs": "GARPGurus.txt -Hyper"
     }
   }
 }
