--- a/GuruLoader/project.json
+++ b/GuruLoader/project.json
@@ -3,12 +3,11 @@
 
   "dependencies": {
     "HtmlAgilityPack.NetCore": "1.5.0.1",
-    "NETStandard.Library": "1.6.0"
+    "NETStandard.Library": "1.5.0-rc2-24027"
   },
 
   "frameworks": {
-    "netstandard1.6": {
-      "imports": "dnxcore50"
+    "netstandard1.5": {
     }
   }
 }
