--- a/GuruLoaderTests/GuruLoaderTests.csproj
+++ b/GuruLoaderTests/GuruLoaderTests.csproj
@@ -1,8 +1,9 @@
-﻿<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
+<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" />
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <!--<TargetFramework>netcoreapp1.0</TargetFramework>-->
+    <TargetFramework>NetCoreApp1.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="**\*.cs" />
@@ -61,9 +62,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.NETCore.App">
+    <!--<PackageReference Include="Microsoft.NETCore.App">
       <Version>1.0.1</Version>
-    </PackageReference>
+    </PackageReference>-->
     <PackageReference Include="Microsoft.NET.Sdk">
       <Version>1.0.0-alpha-20161104-2</Version>
       <PrivateAssets>All</PrivateAssets>
@@ -76,6 +77,9 @@
     </PackageReference>
     <PackageReference Include="xunit.runner.visualstudio">
       <Version>2.2.0-beta4-build1188</Version>
+    </PackageReference>
+    <PackageReference Include="Microsoft.NetCore.App">
+      <Version>1.0.1</Version>
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
