--- a/Functions/project.json
+++ b/Functions/project.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    //"HtmlAgilityPack": "1.4.9.5"
+    "HtmlAgilityPack.NetCore": "1.5.0.1",
+    "NetStandardLibrary": "1.6.1"
   },
   "frameworks": {
     "net46":{}
